--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.8.7"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
