--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "node ./bin/www",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm start --prefix client",
-    "client-install": "npm install --prefix client",
+    "client-install": "cd client && npm install && cd ..",
     "server": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
