Set up and linked to online database on ElephantSQL

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,11 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "password123",
-    "database": "school_manager",
-    "host": "127.0.0.1",
-    "dialect": "postgres",
-    "operatorsAliases": false
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres"
   },
   "test": {
     "username": "root",
