--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm start --prefix client",
     "client-install": "cd client && npm install && cd ..",
-    "server": "nodemon ./bin/www",
+    "server": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
