--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "npm start --prefix client",
     "client-install": "cd client && npm install && cd ..",
-    "server": "nodemon app.js",
+    "server": "nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
